--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.21.11"
+    "@babel/plugin-transform-private-property-in-object": "^7.21.11",
+    "postcss-safe-parser": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
